--- a/indexV2.html
+++ b/indexV2.html
@@ -17,7 +17,7 @@
     <div class="slideshow-container" id="slideshow-container">
       <div class="mySlides fade">
         <a href="https://placeholder.com"><img src="assets/elements/login_and_setting_page_images/alerts and notifications.svg"></a>
-       <p>Receive the latest updates and alerts within the building via Tenex!!</p>>
+       <p>Receive the latest updates and alerts within the building via Tenex!!</p>
         </div>
 
       <div class="mySlides fade">
