--- a/indexV2.html
+++ b/indexV2.html
@@ -16,18 +16,18 @@
   <body>
     <div class="slideshow-container" id="slideshow-container">
       <div class="mySlides fade">
-        <a href="https://placeholder.com"><img src="assets/elements/login_and_setting_page_images/alerts and notifications.svg"></a>
-       <p>Receive the latest updates and alerts within the building via Tenex!!</p>
+        <img src="assets/elements/login_and_setting_page_images/alerts and notifications.svg">
+       <p>Receive the latest alerts and updates of your residential building via Tenex!</p>
         </div>
 
       <div class="mySlides fade">
-        <a href="https://placeholder.com"><img src="assets/elements/login_and_setting_page_images/calender.svg"></a>
-        <p>Track & fin upcoming or old notifications, booking and request via our calendar feature!</p>
+        <img src="assets/elements/login_and_setting_page_images/calendar.svg">
+        <p>Track & find notifications, bookings, and requests via our calendar feature!</p>
       </div>
 
       <div class="mySlides fade">
-        <a href="https://placeholder.com"><img src="assets/elements/login_and_setting_page_images/requests and bookings.svg"></a>
-        <p>Create private requests to manager & book amenities via Tenex!</p>
+        <img src="assets/elements/login_and_setting_page_images/requests and bookings.svg">
+        <p>Send requests to your building manager & book amenities via Tenex!</p>
       </div>
       <div style="text-align: center">
         <span class="dot" onclick="currentSlide(1)"></span>
@@ -59,7 +59,7 @@
         /></label>
       </form>
 
-      <p>Forgot Password?</p>
+      <p>Forgot password?</p>
       <div class="btn_to_login">
         <button type="submit" form="loginForm" id="signInBtn" >SIGN IN</button>
       </div>
