--- a/more.html
+++ b/more.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-    <link rel="stylesheet" href="assets/css/more.css" />
+    <link rel="stylesheet" href="assets/css/moreV2.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Navigation bar at bottom of screen -->
@@ -15,92 +16,43 @@
         <ul>
           <li>
             <button id="nav_home">
-              <svg
-                width="16"
-                height="20"
-                viewBox="0 0 16 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
+              <svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M8 20C9.1 20 10 19.1 10 18H6C6 19.1 6.89 20 8 20ZM14 14V9C14 5.93 12.36 3.36 9.5 2.68V2C9.5 1.17 8.83 0.5 8 0.5C7.17 0.5 6.5 1.17 6.5 2V2.68C3.63 3.36 2 5.92 2 9V14L0 16V17H16V16L14 14Z"
-                  fill="#848484"
-                />
+                  fill="#848484" />
               </svg>
-              Navigation
+              Notification
             </button>
           </li>
           <li>
             <button id="nav_cal">
-              <svg
-                width="21"
-                height="22"
-                viewBox="0 0 21 22"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+              <svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M18.6001 2H17.6001V0H15.6001V2H5.6001V0H3.6001V2H2.6001C1.5001 2 0.600098 2.9 0.600098 4V20C0.600098 21.1 1.5001 22 2.6001 22H18.6001C19.7001 22 20.6001 21.1 20.6001 20V4C20.6001 2.9 19.7001 2 18.6001 2ZM18.6001 20H2.6001V7H18.6001V20Z"
-                  fill="#848484"
-                />
+                  fill="#848484" />
               </svg>
               Calendar
             </button>
           </li>
           <li>
             <button id="nav_tbox">
-              <svg
-                width="18"
-                height="18"
-                viewBox="0 0 18 18"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+              <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M16.0002 0H1.99024C0.880244 0 0.0102441 0.89 0.0102441 2L0.000244141 16C0.000244141 17.1 0.880244 18 1.99024 18H16.0002C17.1002 18 18.0002 17.1 18.0002 16V2C18.0002 0.89 17.1002 0 16.0002 0ZM16.0002 12H12.0002C12.0002 13.66 10.6502 15 9.00024 15C7.35024 15 6.00024 13.66 6.00024 12H1.99024V2H16.0002V12Z"
-                  fill="#848484"
-                />
+                  fill="#848484" />
               </svg>
-              Tenex Box
+              TenexBox
             </button>
           </li>
           <li>
             <button id="nav_more">
-              <svg
-                width="22"
-                height="17"
-                viewBox="0 0 22 17"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+              <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="1.50012" cy="1.5" r="1.5" fill="#848484" />
                 <circle cx="1.50012" cy="8.5" r="1.5" fill="#848484" />
                 <circle cx="1.50012" cy="15.5" r="1.5" fill="#848484" />
-                <rect
-                  x="6.00012"
-                  width="16"
-                  height="3"
-                  rx="1.5"
-                  fill="#848484"
-                />
-                <rect
-                  x="6.00012"
-                  y="7"
-                  width="16"
-                  height="3"
-                  rx="1.5"
-                  fill="#848484"
-                />
-                <rect
-                  x="6.00012"
-                  y="14"
-                  width="16"
-                  height="3"
-                  rx="1.5"
-                  fill="#848484"
-                />
+                <rect x="6.00012" width="16" height="3" rx="1.5" fill="#848484" />
+                <rect x="6.00012" y="7" width="16" height="3" rx="1.5" fill="#848484" />
+                <rect x="6.00012" y="14" width="16" height="3" rx="1.5" fill="#848484" />
               </svg>
               More
             </button>
@@ -109,97 +61,76 @@
       </div>
     </div>
 
-    <header>
-      <div class="topHeader">
-        <!-- <button id="back_btn" class="back_btn">
-          <svg
-            width="22"
-            height="24"
-            viewBox="0 0 22 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M12 22L2 12L12 2"
-              stroke="#AAAAAA"
-              stroke-width="3"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-        </button> -->
-        <h1 id="headerTitle" class="headerTitle">More</h1>
-      </div>
+    <div class="body_wrapper_more">
+      <header class="calendar_header">
+        <div class="topHeader">
+            <h2 id="headerTitle" class="headerTitle">More</h2>
+        </div>
     </header>
-
-    <main>
-      <section>
-        <h2>User</h2>
-        <div class="more">
-          <div class="first">
-            <i class="fas fa-circle"></i>
-            <p>Profile</p>
+      <main>
+        <section>
+          <h3>User</h3>
+          <div class="more">
+            <div class="first">
+              <img src="assets/elements/login_and_setting_page_images/profile.svg">
+              <p>Profile</p>
+            </div>
+            <div class="second">
+              <i class="fas fa-chevron-right"> </i>
+            </div>
           </div>
-          <div class="second">
-            <i class="fas fa-chevron-right"> </i>
+        </section>
+        <section>
+          <h3>Sounds & Notifications</h3>
+          <div class="more">
+            <div class="first">
+              <img src="assets/elements/login_and_setting_page_images/notifications.svg">
+              <p>Notifications</p>
+            </div>
+            <div class="second">
+              <i class="fas fa-chevron-right"> </i>
+            </div>
           </div>
+        </section>
+        <section>
+          <h3>Help & Information</h3>
+          <div class="more" id="Regulation">
+            <div class="first">
+              <img src="assets/elements/login_and_setting_page_images/regulation.svg">
+              <p>Regulation</p>
+            </div>
+            <div class="second">
+              <i class="fas fa-chevron-right"> </i>
+            </div>
+          </div>
+          <div class="more" id="FAQs">
+            <div class="first">
+              <img src="assets/elements/login_and_setting_page_images/FAQs.svg">
+              <p>FAQs</p>
+            </div>
+            <div class="second">
+              <i class="fas fa-chevron-right"> </i>
+            </div>
+          </div>
+        </section>
+        <section>
+          <h3>Others</h3>
+          <div class="more">
+            <div class="first">
+              <img src="assets/elements/login_and_setting_page_images/share.svg">
+              <p>Share</p>
+            </div>
+            <div class="second">
+              <i class="fas fa-chevron-right"> </i>
+            </div>
+          </div>
+        </section>
+        <div class="button">
+          <button type="button" id="signout_btn">SIGN OUT</button>
         </div>
-      </section>
-
-      <section>
-        <h2>Sounds & Notifications</h2>
-        <div class="more">
-          <div class="first">
-            <i class="fas fa-circle"></i>
-            <p>Notifications</p>
-          </div>
-          <div class="second">
-            <i class="fas fa-chevron-right"> </i>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <h2>Help & Information</h2>
-        <div class="more" id="Regulation">
-          <div class="first">
-            <i class="fas fa-circle"></i>
-            <p>Regulation</p>
-          </div>
-          <div class="second">
-            <i class="fas fa-chevron-right"> </i>
-          </div>
-        </div>
-
-        <div class="more" id="FAQs">
-          <div class="first">
-            <i class="fas fa-circle"></i>
-            <p>FAQs</p>
-          </div>
-          <div class="second">
-            <i class="fas fa-chevron-right"> </i>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <h2>Others</h2>
-        <div class="more">
-          <div class="first">
-            <i class="fas fa-circle"></i>
-            <p>Share</p>
-          </div>
-          <div class="second">
-            <i class="fas fa-chevron-right"> </i>
-          </div>
-        </div>
-      </section>
-
-      <div class="button">
-        <button type="button" id="signout_btn">SIGN OUT</button>
-      </div>
-    </main>
-    <footer></footer>
+      </main>
+      <footer></footer>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
