Fixed Issues For Presentation 3

--- a/more.html
+++ b/more.html
@@ -16,51 +16,44 @@
         <ul>
           <li>
             <button id="nav_home">
-              <svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M8 20C9.1 20 10 19.1 10 18H6C6 19.1 6.89 20 8 20ZM14 14V9C14 5.93 12.36 3.36 9.5 2.68V2C9.5 1.17 8.83 0.5 8 0.5C7.17 0.5 6.5 1.17 6.5 2V2.68C3.63 3.36 2 5.92 2 9V14L0 16V17H16V16L14 14Z"
-                  fill="#848484" />
-              </svg>
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 22.9375C13.2375 22.9375 14.25 21.925 14.25 20.6875H9.75C9.75 21.925 10.7512 22.9375 12 22.9375ZM18.75 16.1875V10.5625C18.75 7.10875 16.905 4.2175 13.6875 3.4525V2.6875C13.6875 1.75375 12.9337 1 12 1C11.0663 1 10.3125 1.75375 10.3125 2.6875V3.4525C7.08375 4.2175 5.25 7.0975 5.25 10.5625V16.1875L3 18.4375V19.5625H21V18.4375L18.75 16.1875Z" fill="#AAAAAA"/>
+                </svg>                                 
               Notification
             </button>
           </li>
           <li>
             <button id="nav_cal">
-              <svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M18.6001 2H17.6001V0H15.6001V2H5.6001V0H3.6001V2H2.6001C1.5001 2 0.600098 2.9 0.600098 4V20C0.600098 21.1 1.5001 22 2.6001 22H18.6001C19.7001 22 20.6001 21.1 20.6001 20V4C20.6001 2.9 19.7001 2 18.6001 2ZM18.6001 20H2.6001V7H18.6001V20Z"
-                  fill="#848484" />
-              </svg>
+              <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20.5996 3H19.5996V1H17.5996V3H7.59961V1H5.59961V3H4.59961C3.49961 3 2.59961 3.9 2.59961 5V21C2.59961 22.1 3.49961 23 4.59961 23H20.5996C21.6996 23 22.5996 22.1 22.5996 21V5C22.5996 3.9 21.6996 3 20.5996 3ZM20.5996 21H4.59961V8H20.5996V21Z" fill="#AAAAAA"/>
+                </svg>
               Calendar
             </button>
           </li>
           <li>
             <button id="nav_tbox">
-              <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M16.0002 0H1.99024C0.880244 0 0.0102441 0.89 0.0102441 2L0.000244141 16C0.000244141 17.1 0.880244 18 1.99024 18H16.0002C17.1002 18 18.0002 17.1 18.0002 16V2C18.0002 0.89 17.1002 0 16.0002 0ZM16.0002 12H12.0002C12.0002 13.66 10.6502 15 9.00024 15C7.35024 15 6.00024 13.66 6.00024 12H1.99024V2H16.0002V12Z"
-                  fill="#848484" />
-              </svg>
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.7778 2H4.21111C2.97778 2 2.01111 2.98889 2.01111 4.22222L2 19.7778C2 21 2.97778 22 4.21111 22H19.7778C21 22 22 21 22 19.7778V4.22222C22 2.98889 21 2 19.7778 2ZM19.7778 15.3333H15.3333C15.3333 17.1778 13.8333 18.6667 12 18.6667C10.1667 18.6667 8.66667 17.1778 8.66667 15.3333H4.21111V4.22222H19.7778V15.3333Z" fill="#AAAAAA"/>
+                </svg>
               TenexBox
             </button>
           </li>
           <li>
             <button id="nav_more">
-              <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="1.50012" cy="1.5" r="1.5" fill="#848484" />
-                <circle cx="1.50012" cy="8.5" r="1.5" fill="#848484" />
-                <circle cx="1.50012" cy="15.5" r="1.5" fill="#848484" />
-                <rect x="6.00012" width="16" height="3" rx="1.5" fill="#848484" />
-                <rect x="6.00012" y="7" width="16" height="3" rx="1.5" fill="#848484" />
-                <rect x="6.00012" y="14" width="16" height="3" rx="1.5" fill="#848484" />
-              </svg>
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="2.5" cy="5.5" r="1.5" fill="#AAAAAA"/>
+                <circle cx="2.5" cy="12.5" r="1.5" fill="#AAAAAA"/>
+                <circle cx="2.5" cy="19.5" r="1.5" fill="#AAAAAA"/>
+                <rect x="7" y="4" width="16" height="3" rx="1.5" fill="#AAAAAA"/>
+                <rect x="7" y="11" width="16" height="3" rx="1.5" fill="#AAAAAA"/>
+                <rect x="7" y="18" width="16" height="3" rx="1.5" fill="#AAAAAA"/>
+                </svg>
               More
             </button>
           </li>
         </ul>
       </div>
     </div>
-
     <div class="body_wrapper_more">
       <header class="calendar_header">
         <div class="topHeader">
