Offline mode only have pages. Need more to work on

--- a/tenexbox.html
+++ b/tenexbox.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tenex - Tenexbox</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="assets/js/tenexbox.js" defer></script>
   </head>
 
   <body>
@@ -17,38 +16,94 @@
           <ul>
             <li>
               <button id="nav_home">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M12 22.9375C13.2375 22.9375 14.25 21.925 14.25 20.6875H9.75C9.75 21.925 10.7512 22.9375 12 22.9375ZM18.75 16.1875V10.5625C18.75 7.10875 16.905 4.2175 13.6875 3.4525V2.6875C13.6875 1.75375 12.9337 1 12 1C11.0663 1 10.3125 1.75375 10.3125 2.6875V3.4525C7.08375 4.2175 5.25 7.0975 5.25 10.5625V16.1875L3 18.4375V19.5625H21V18.4375L18.75 16.1875Z" fill="#AAAAAA"/>
-                  </svg>                                 
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 22.9375C13.2375 22.9375 14.25 21.925 14.25 20.6875H9.75C9.75 21.925 10.7512 22.9375 12 22.9375ZM18.75 16.1875V10.5625C18.75 7.10875 16.905 4.2175 13.6875 3.4525V2.6875C13.6875 1.75375 12.9337 1 12 1C11.0663 1 10.3125 1.75375 10.3125 2.6875V3.4525C7.08375 4.2175 5.25 7.0975 5.25 10.5625V16.1875L3 18.4375V19.5625H21V18.4375L18.75 16.1875Z"
+                    fill="#AAAAAA"
+                  />
+                </svg>
                 Notification
               </button>
             </li>
             <li>
               <button id="nav_cal">
-                <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M20.5996 3H19.5996V1H17.5996V3H7.59961V1H5.59961V3H4.59961C3.49961 3 2.59961 3.9 2.59961 5V21C2.59961 22.1 3.49961 23 4.59961 23H20.5996C21.6996 23 22.5996 22.1 22.5996 21V5C22.5996 3.9 21.6996 3 20.5996 3ZM20.5996 21H4.59961V8H20.5996V21Z" fill="#AAAAAA"/>
-                  </svg>
+                <svg
+                  width="25"
+                  height="24"
+                  viewBox="0 0 25 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M20.5996 3H19.5996V1H17.5996V3H7.59961V1H5.59961V3H4.59961C3.49961 3 2.59961 3.9 2.59961 5V21C2.59961 22.1 3.49961 23 4.59961 23H20.5996C21.6996 23 22.5996 22.1 22.5996 21V5C22.5996 3.9 21.6996 3 20.5996 3ZM20.5996 21H4.59961V8H20.5996V21Z"
+                    fill="#AAAAAA"
+                  />
+                </svg>
                 Calendar
               </button>
             </li>
             <li>
               <button id="nav_tbox">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M19.7778 2H4.21111C2.97778 2 2.01111 2.98889 2.01111 4.22222L2 19.7778C2 21 2.97778 22 4.21111 22H19.7778C21 22 22 21 22 19.7778V4.22222C22 2.98889 21 2 19.7778 2ZM19.7778 15.3333H15.3333C15.3333 17.1778 13.8333 18.6667 12 18.6667C10.1667 18.6667 8.66667 17.1778 8.66667 15.3333H4.21111V4.22222H19.7778V15.3333Z" fill="#AAAAAA"/>
-                  </svg>
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.7778 2H4.21111C2.97778 2 2.01111 2.98889 2.01111 4.22222L2 19.7778C2 21 2.97778 22 4.21111 22H19.7778C21 22 22 21 22 19.7778V4.22222C22 2.98889 21 2 19.7778 2ZM19.7778 15.3333H15.3333C15.3333 17.1778 13.8333 18.6667 12 18.6667C10.1667 18.6667 8.66667 17.1778 8.66667 15.3333H4.21111V4.22222H19.7778V15.3333Z"
+                    fill="#AAAAAA"
+                  />
+                </svg>
                 TenexBox
               </button>
             </li>
             <li>
               <button id="nav_more">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="2.5" cy="5.5" r="1.5" fill="#AAAAAA"/>
-                  <circle cx="2.5" cy="12.5" r="1.5" fill="#AAAAAA"/>
-                  <circle cx="2.5" cy="19.5" r="1.5" fill="#AAAAAA"/>
-                  <rect x="7" y="4" width="16" height="3" rx="1.5" fill="#AAAAAA"/>
-                  <rect x="7" y="11" width="16" height="3" rx="1.5" fill="#AAAAAA"/>
-                  <rect x="7" y="18" width="16" height="3" rx="1.5" fill="#AAAAAA"/>
-                  </svg>
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle cx="2.5" cy="5.5" r="1.5" fill="#AAAAAA" />
+                  <circle cx="2.5" cy="12.5" r="1.5" fill="#AAAAAA" />
+                  <circle cx="2.5" cy="19.5" r="1.5" fill="#AAAAAA" />
+                  <rect
+                    x="7"
+                    y="4"
+                    width="16"
+                    height="3"
+                    rx="1.5"
+                    fill="#AAAAAA"
+                  />
+                  <rect
+                    x="7"
+                    y="11"
+                    width="16"
+                    height="3"
+                    rx="1.5"
+                    fill="#AAAAAA"
+                  />
+                  <rect
+                    x="7"
+                    y="18"
+                    width="16"
+                    height="3"
+                    rx="1.5"
+                    fill="#AAAAAA"
+                  />
+                </svg>
                 More
               </button>
             </li>
@@ -113,29 +168,62 @@
             </svg>
           </button>
           <h2 id="headerTitle" class="headerTitle">Request</h2>
-          <button id="edit_btn" class="edit_btn" type="button"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <g filter="url(#filter0_d)">
-              <path
-                d="M6 20.4173V25H10.5827L24.0986 11.4841L19.5159 6.9014L6 20.4173ZM27.6426 7.94015C28.1192 7.46355 28.1192 6.69365 27.6426 6.21705L24.7829 3.35745C24.3063 2.88085 23.5365 2.88085 23.0599 3.35745L20.8235 5.59381L25.4062 10.1765L27.6426 7.94015Z"
-                fill="#828282" />
-              <path
-                d="M4.93934 19.3566L4.5 19.796V20.4173V25V26.5H6H10.5827H11.204L11.6434 26.0607L25.1593 12.5448L25.4062 12.2978L26.2199 11.4841L26.4669 11.2372L28.7032 9.00081C29.7656 7.93842 29.7656 6.21878 28.7032 5.15639L25.8436 2.29679C24.7812 1.2344 23.0616 1.2344 21.9992 2.29679L19.7628 4.53315L19.5159 4.78008L18.7022 5.59381L18.4552 5.84074L4.93934 19.3566Z"
-                stroke="white" stroke-width="3" />
-            </g>
-            <defs>
-              <filter id="filter0_d" x="0" y="0" width="34" height="34" filterUnits="userSpaceOnUse"
-                color-interpolation-filters="sRGB">
-                <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" />
-                <feOffset dy="3" />
-                <feGaussianBlur stdDeviation="1.5" />
-                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.06 0" />
-                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
-              </filter>
-            </defs>
-          </svg></button>
+          <button id="edit_btn" class="edit_btn" type="button">
+            <svg
+              width="34"
+              height="34"
+              viewBox="0 0 34 34"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g filter="url(#filter0_d)">
+                <path
+                  d="M6 20.4173V25H10.5827L24.0986 11.4841L19.5159 6.9014L6 20.4173ZM27.6426 7.94015C28.1192 7.46355 28.1192 6.69365 27.6426 6.21705L24.7829 3.35745C24.3063 2.88085 23.5365 2.88085 23.0599 3.35745L20.8235 5.59381L25.4062 10.1765L27.6426 7.94015Z"
+                  fill="#828282"
+                />
+                <path
+                  d="M4.93934 19.3566L4.5 19.796V20.4173V25V26.5H6H10.5827H11.204L11.6434 26.0607L25.1593 12.5448L25.4062 12.2978L26.2199 11.4841L26.4669 11.2372L28.7032 9.00081C29.7656 7.93842 29.7656 6.21878 28.7032 5.15639L25.8436 2.29679C24.7812 1.2344 23.0616 1.2344 21.9992 2.29679L19.7628 4.53315L19.5159 4.78008L18.7022 5.59381L18.4552 5.84074L4.93934 19.3566Z"
+                  stroke="white"
+                  stroke-width="3"
+                />
+              </g>
+              <defs>
+                <filter
+                  id="filter0_d"
+                  x="0"
+                  y="0"
+                  width="34"
+                  height="34"
+                  filterUnits="userSpaceOnUse"
+                  color-interpolation-filters="sRGB"
+                >
+                  <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                  <feColorMatrix
+                    in="SourceAlpha"
+                    type="matrix"
+                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                  />
+                  <feOffset dy="3" />
+                  <feGaussianBlur stdDeviation="1.5" />
+                  <feColorMatrix
+                    type="matrix"
+                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.06 0"
+                  />
+                  <feBlend
+                    mode="normal"
+                    in2="BackgroundImageFix"
+                    result="effect1_dropShadow"
+                  />
+                  <feBlend
+                    mode="normal"
+                    in="SourceGraphic"
+                    in2="effect1_dropShadow"
+                    result="shape"
+                  />
+                </filter>
+              </defs>
+            </svg>
+          </button>
         </div>
       </header>
 
@@ -360,8 +448,6 @@
         console.warn("Service Worker not available");
       }
     </script>
-    <!-- Link to handlebars js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
@@ -391,5 +477,6 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
+    <script src="assets/js/tenexbox.js" defer></script>
   </body>
 </html>
