fixed service worker offline only on 1 page

--- a/bookingDetail.html
+++ b/bookingDetail.html
@@ -120,7 +120,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Script for pwa -->
-    <script>
+    <!-- <script>
       // does the browser support service workers?
       if ("serviceWorker" in navigator) {
         // fires when the service worker is ready
@@ -144,7 +144,7 @@
         // happens when the app isn't served over a TLS connection (HTTPS)
         console.warn("Service Worker not available");
       }
-    </script>
+    </script> -->
     <!-- Link to handlebars js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
