--- a/FAQs.html
+++ b/FAQs.html
@@ -61,7 +61,7 @@
     crossorigin="anonymous"
   ></script>
   <!-- Script for pwa -->
-  <script>
+  <!-- <script>
     // does the browser support service workers?
     if ("serviceWorker" in navigator) {
       // fires when the service worker is ready
@@ -85,7 +85,7 @@
       // happens when the app isn't served over a TLS connection (HTTPS)
       console.warn("Service Worker not available");
     }
-  </script>
+  </script> -->
 
   <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
