--- a/index-old.html
+++ b/index-old.html
@@ -57,7 +57,7 @@ button {
     <script src="main.js" defer></script>
 
     <!-- Script for pwa -->
-    <script>
+    <!-- <script>
       // does the browser support service workers?
       if ("serviceWorker" in navigator) {
         // fires when the service worker is ready
@@ -81,7 +81,7 @@ button {
         // happens when the app isn't served over a TLS connection (HTTPS)
         console.warn("Service Worker not available");
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <header>
