--- a/notificationHome.html
+++ b/notificationHome.html
@@ -570,7 +570,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <!-- Script for pwa -->
-  <script>
+  <!-- <script>
     // does the browser support service workers?
     if ("serviceWorker" in navigator) {
       // fires when the service worker is ready
@@ -594,7 +594,7 @@
       // happens when the app isn't served over a TLS connection (HTTPS)
       console.warn("Service Worker not available");
     }
-  </script>
+  </script> -->
 
   <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
