Fixed the service worker with reza

--- a/more.html
+++ b/more.html
@@ -186,11 +186,11 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/d61ee45fb2.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
-    <script src="assets/js/more.js" defer></script>
+    <script src="assets/js/more.js"></script>
   </body>
 </html>
