--- a/newRequestRequest.html
+++ b/newRequestRequest.html
@@ -509,6 +509,6 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-    <script src="assets/js/newRequestRequest.js" defer></script>
+    <script src="assets/js/newRequestRequest.js"></script>
   </body>
 </html>
