--- a/notificationArchive.html
+++ b/notificationArchive.html
@@ -193,7 +193,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-        <script src="assets/js/notificationArchive.js" defer></script>
+        <script src="assets/js/notificationArchive.js"></script>
 
 </body>
 
