--- a/notificationHome.html
+++ b/notificationHome.html
@@ -289,6 +289,8 @@
       </section>
       <section class="recentSection">
         <h2>Recents</h2>
+        <div id="onlineStatus"></div>
+
         <div class="recents_wrapper" id="recentCards">
           <!-- <div class="newBookingCard">
             <div class="newBookingCard_wrapper">
