--- a/tenexbox.html
+++ b/tenexbox.html
@@ -477,6 +477,6 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-    <script src="assets/js/tenexbox.js" defer></script>
+    <script src="assets/js/tenexbox.js"></script>
   </body>
 </html>
