--- a/newRequestBooking.html
+++ b/newRequestBooking.html
@@ -174,6 +174,6 @@
       firebase.initializeApp(firebaseConfig);
     </script>
 
-    <script src="assets/js/newRequestBooking.js" defer></script>
+    <script src="assets/js/newRequestBooking.js"></script>
   </body>
 </html>
